# hydra-explorer

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cabal.project  docker-compose.yaml  flake.nix  justfile  registry.json
.github/workflows/: cd.yaml  ci-nix.yaml  docker.yaml
api/: client-api.yaml  hydra-explorer-api.yaml  observer-api.yaml  observer.yaml
docs/front-end/: ARCHITECTURE-SPINE.md  DESIGN.md  EXPERIENCE.md  prd.md
hydra-explorer/: README.md  hydra-explorer.cabal
hydra-explorer/frontend/: Main.hs  app.cabal  flake.nix
hydra-explorer/golden/: Observation.json
hydra-explorer/golden/HeadObservation/: Abort.json  Close.json  CollectCom.json  Commit.json  Contest.json  Decrement.json  Deposit.json  Fanout.json  FinalPartialFanout.json  Increment.json  Init.json  NoHeadTx.json  PartialFanout.json  Recover.json
hydra-explorer/golden/OnChainTx/: OnAbortTx.json  OnCloseTx.json  OnCollectComTx.json  OnCommitTx.json  OnContestTx.json  OnDecrementTx.json  OnDepositTx.json  OnFanoutTx.json  OnIncrementTx.json  OnInitTx.json  OnRecoverTx.json
hydra-explorer/json-schemas/: hydra-explorer-api.yaml
hydra-explorer/src/Hydra/: Explorer.hs
hydra-explorer/src/Hydra/Explorer/: Env.hs  ExplorerState.hs  ObservationApi.hs  Options.hs  ScriptsRegistry.hs
hydra-explorer/src/Hydra/Explorer/Observer/: Api.hs
hydra-explorer/test/Hydra/: ExplorerSpec.hs
hydra-explorer/test/Hydra/Explorer/: ApiSpec.hs  ExplorerStateSpec.hs  HydraExplorerSpec.hs  IntegrationSpec.hs
hydra-explorer/web/: .env.example  .env.local  .npmrc  README.md  env.d.ts  eslint.config.mjs  hydra-explorer.nix  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
hydra-explorer/web/src/: utils.ts  utils.tsx
hydra-explorer/web/src/app/: globals.css  layout.tsx  model.ts  model.tsx  page.tsx
hydra-explorer/web/src/components/DoomBadge/: index.tsx
hydra-explorer/web/src/components/Footer/: index.tsx
hydra-explorer/web/src/components/HashDisplay/: index.tsx
hydra-explorer/web/src/components/HeadDetails/: index.tsx
hydra-explorer/web/src/components/Header/: index.tsx
hydra-explorer/web/src/components/HeadsDashboard/: index.tsx
hydra-explorer/web/src/components/HeadsTable/: index.tsx  select.tsx
hydra-explorer/web/src/components/IntervalSetter/: index.tsx
hydra-explorer/web/src/components/Layout/: index.tsx
hydra-explorer/web/src/components/MemberCommitDetails/: index.tsx
hydra-explorer/web/src/components/MemberTable/: index.tsx
hydra-explorer/web/src/components/NetworkSetter/: index.tsx
hydra-explorer/web/src/components/OfflineBanner/: index.tsx
hydra-explorer/web/src/components/StatusBadge/: index.tsx
hydra-explorer/web/src/components/TickBox/: index.tsx
hydra-explorer/web/src/components/VersionSetter/: index.tsx
hydra-explorer/web/src/components/ui/: sheet.tsx  table.tsx
hydra-explorer/web/src/hooks/: useConnectionStatus.ts  usePollingEngine.ts
hydra-explorer/web/src/hooks/DataFetcher/: index.tsx
hydra-explorer/web/src/providers/CardanoExplorer/: index.tsx
hydra-explorer/web/src/providers/HeadsDataProvider/: index.tsx
hydra-explorer/web/src/providers/IntervalProvider/: index.tsx
hydra-explorer/web/src/providers/NetworkProvider/: index.tsx
hydra-explorer/web/src/providers/VersionProvider/: index.tsx
hydra-explorer/web/src/store/: useStore.ts
nix/: hydra-doom.nix  hydra-explorer-aws.nix  hydra-explorer-configuration.nix  nixos-configs.nix  nixosModule.nix  outputs.nix  pkgs.nix  project.nix  shell.nix  treefmt.nix
secrets/: README.md  github-runner-token.age  secrets.nix
web/: package.json
