cabal-version: 3.0
name:          hydra-explorer
version:       0.16.0
synopsis:      Hydra Explorer
author:        IOG
copyright:     2023 IOG
license:       Apache-2.0
license-files: LICENSE

source-repository head
  type:     git
  location: https://github.com/input-output-hk/hydra/hydra-explorer/

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DerivingStrategies
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -fprint-potential-instances

library
  import:          project-config
  hs-source-dirs:  src
  ghc-options:     -haddock
  build-depends:
    , aeson
    , base
    , hydra-cardano-api
    , hydra-node
    , hydra-prelude
    , hydra-tx
    , hydra-tx:testlib
    , io-classes
    , network
    , optparse-applicative
    , QuickCheck
    , servant
    , servant-server
    , wai
    , wai-cors
    , warp

  exposed-modules:
    Hydra.Explorer
    Hydra.Explorer.ExplorerState
    Hydra.Explorer.Observer.Api
    Hydra.Explorer.Options

executable hydra-explorer
  import:         project-config
  hs-source-dirs: exe
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  main-is:        Main.hs
  build-depends:
    , hydra-explorer
    , hydra-prelude
    , optparse-applicative

test-suite tests
  import:             project-config
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:     test
  main-is:            Main.hs
  type:               exitcode-stdio-1.0
  build-depends:
    , aeson
    , base
    , filepath
    , hspec
    , hspec-wai
    , http-client
    , http-conduit
    , hydra-cluster
    , hydra-explorer
    , hydra-node
    , hydra-prelude
    , hydra-test-utils
    , lens
    , lens-aeson
    , openapi3
    , process
    , QuickCheck
    , yaml

  other-modules:
    Hydra.Explorer.ExplorerStateSpec
    Hydra.Explorer.HydraExplorerSpec
    Hydra.ExplorerSpec
    Spec

  build-tool-depends:
    , hspec-discover:hspec-discover
    , hydra-explorer:hydra-explorer
